--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -152,56 +152,56 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-28 20:38:47,605 - src.textsummarisernewton.logging.logger - INFO - YAML file: config\\config.yaml loaded successfully\n"
+      "2024-07-29 01:12:46,099 - textsummarisernewton.logging.logger - INFO - YAML file: config\\config.yaml loaded successfully\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-28 20:38:47,605: INFO: common: YAML file: config\\config.yaml loaded successfully]\n"
+      "[2024-07-29 01:12:46,099: INFO: common: YAML file: config\\config.yaml loaded successfully]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-28 20:38:47,628 - src.textsummarisernewton.logging.logger - INFO - YAML file: params.yaml loaded successfully\n"
+      "2024-07-29 01:12:46,111 - textsummarisernewton.logging.logger - INFO - YAML file: params.yaml loaded successfully\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-28 20:38:47,628: INFO: common: YAML file: params.yaml loaded successfully]\n"
+      "[2024-07-29 01:12:46,111: INFO: common: YAML file: params.yaml loaded successfully]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-28 20:38:47,634 - src.textsummarisernewton.logging.logger - INFO - created directory at: artifacts\n"
+      "2024-07-29 01:12:46,113 - textsummarisernewton.logging.logger - INFO - created directory at: artifacts\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-28 20:38:47,634: INFO: common: created directory at: artifacts]\n"
+      "[2024-07-29 01:12:46,113: INFO: common: created directory at: artifacts]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-28 20:38:47,642 - src.textsummarisernewton.logging.logger - INFO - created directory at: artifacts/data_validation\n"
+      "2024-07-29 01:12:46,116 - textsummarisernewton.logging.logger - INFO - created directory at: artifacts/data_validation\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-28 20:38:47,642: INFO: common: created directory at: artifacts/data_validation]\n"
+      "[2024-07-29 01:12:46,116: INFO: common: created directory at: artifacts/data_validation]\n"
      ]
     }
    ],
