--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -121,70 +121,70 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-27 03:01:21,678 - src.textsummarisernewton.logging.logger - INFO - YAML file: config\\config.yaml loaded successfully\n"
+      "2024-07-29 01:14:45,275 - textsummarisernewton.logging.logger - INFO - YAML file: config\\config.yaml loaded successfully\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-27 03:01:21,678: INFO: common: YAML file: config\\config.yaml loaded successfully]\n"
+      "[2024-07-29 01:14:45,275: INFO: common: YAML file: config\\config.yaml loaded successfully]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-27 03:01:21,682 - src.textsummarisernewton.logging.logger - INFO - YAML file: params.yaml loaded successfully\n"
+      "2024-07-29 01:14:45,281 - textsummarisernewton.logging.logger - INFO - YAML file: params.yaml loaded successfully\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-27 03:01:21,682: INFO: common: YAML file: params.yaml loaded successfully]\n"
+      "[2024-07-29 01:14:45,281: INFO: common: YAML file: params.yaml loaded successfully]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-27 03:01:21,683 - src.textsummarisernewton.logging.logger - INFO - created directory at: artifacts\n"
+      "2024-07-29 01:14:45,287 - textsummarisernewton.logging.logger - INFO - created directory at: artifacts\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-27 03:01:21,683: INFO: common: created directory at: artifacts]\n"
+      "[2024-07-29 01:14:45,287: INFO: common: created directory at: artifacts]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-27 03:01:21,686 - src.textsummarisernewton.logging.logger - INFO - created directory at: artifacts/data_ingestion\n"
+      "2024-07-29 01:14:45,291 - textsummarisernewton.logging.logger - INFO - created directory at: artifacts/data_ingestion\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-27 03:01:21,686: INFO: common: created directory at: artifacts/data_ingestion]\n"
+      "[2024-07-29 01:14:45,291: INFO: common: created directory at: artifacts/data_ingestion]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-27 03:01:21,689 - src.textsummarisernewton.logging.logger - INFO - File already exists of size: ~ 7718.35 KB\n"
+      "2024-07-29 01:14:45,296 - src.textsummarisernewton.logging.logger - INFO - File already exists of size: ~ 7718.35 KB\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-27 03:01:21,689: INFO: 1447554207: File already exists of size: ~ 7718.35 KB]\n"
+      "[2024-07-29 01:14:45,296: INFO: 1447554207: File already exists of size: ~ 7718.35 KB]\n"
      ]
     }
    ],
